<resources>
    <string name="app_english_name">Integrated freight management platform</string>
    <string name="login_user_hint">请输入用户名/手机号</string>
    <string name="login_password_hint">请输入6-16位密码</string>
    <string name="button_login">登录</string>
    <string name="button_remember_password">记住密码</string>
    <string name="phone_number">手机号</string>
    <string name="text_home">首页</string>
    <string name="text_my">我的</string>
    <string name="text_menu">菜单</string>
    <string name="text_department">部门：</string>
    <string name="text_post">岗位：</string>
    <string name="text_problem_feedback">问题反馈</string>
    <string name="text_set_up">设置</string>
    <string name="text_clear_cache">清楚缓存</string>
    <string name="text_up_login">退出账号</string>
    <string name="text_warehouse_entry_processing">入库办理</string>
    <string name="text_out_warehouse_entry_processing">出库办理</string>
    <string name="text_outbound_processing">出库办理</string>
    <string name="text_inventory_management">盘点管理</string>
    <string name="text_equipment_implementation">设备实施</string>
    <string name="text_application_time">申请时间：</string>
    <string name="text_storeroom">库房：</string>
    <string name="text_save_draft">保存草稿</string>
    <string name="text_save">保存</string>
    <string name="text_model">型号：</string>
    <string name="text_supplier">供应商：</string>
    <string name="text_receiving_units_and_individuals">接收单位及个人：</string>
    <string name="text_staff">人员：</string>
    <string name="text_time">时间：</string>
    <string name="text_describe">说明</string>
    <string name="text_change_password">修改密码</string>
    <string name="text_original_password">原密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_confirm_password">确认密码</string>
    <string name="is_change_password">是否确认修改密码</string>
    <string name="original_password_hint">请输入原密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_password_hint">再次输入新密码</string>
    <string name="is_password">两次密码不一致</string>
    <string name="toast_user_empty">请输入用户名/手机号</string>
    <string name="toast_password_empty">请输入密码</string>
    <string name="toast_password_error">密码错误，请重新输入</string>
    <string name="toast_please_select_order">请选择运单</string>
    <string name="toast_select_order_one">当前操作只能选择一个运单</string>
    <string name="toast_select_order_no_one">组板操作至少选择两个运单</string>
    <string name="toast_check_count_null">请输入抽检件数</string>
    <string name="toast_check_count_max">抽检件数不得大于运单件数</string>
    <string name="toast_check_route_null">请选择安检通道</string>
    <string name="toast_now_select">当前已选择</string>
    <string name="toast_now_not_select">条运单，未选择</string>
    <string name="toast_confirm_take">条运单，是否确认提货？</string>
    <string name="toast_picking_not_all">不支持部分运单提货</string>
    <string name="toast_confirm_application">条运单，是否确认申请事故签证？</string>
    <string name="toast_please_select_area">请选择区域</string>
    <string name="toast_please_content">请选择内容</string>
    <string name="toast_weighbridge_route_null">请选择地磅通道</string>
    <string name="toast_storage_area_null">请选择存放区域</string>
    <string name="toast_weight_null">请输入重量</string>
    <string name="toast_weight_negative">重量不能为负数，请修改</string>
    <string name="toast_number_null">请输入件数</string>
    <string name="toast_volume_null">请输入体积</string>
    <string name="toast_length_null">请输入长度</string>
    <string name="toast_wide_null">请输入宽度</string>
    <string name="toast_height_null">请输入高度</string>
    <string name="toast_selected">当前条目已锁定，如需操作，请先长按解锁</string>
    <string name="toast_net_error">当前网络不可用，请检查网络</string>
    <string name="toast_print_success">打印机调用成功</string>
    <string name="toast_select_delivery_null">请选择要交接的运单</string>
    <string name="toast_container_type_null">请选择容器类型</string>
    <string name="toast_container_no_null">请选择容器编号</string>
    <string name="toast_pallet_no_null">请选择托盘编号</string>
    <string name="toast_pallet_select_double">请重新选择托盘</string>
    <string name="toast_container_null">集装器数据错误</string>
    <string name="toast_tug_null">拖斗数据错误</string>
    <string name="toast_count_null">请输入件数</string>
    <string name="toast_content_null">请输入内容</string>
    <string name="toast_storeroom_inventory_data_null">请等待数据加载完成</string>
    <string name="toast_container_volume_null">请输入拖斗体积</string>
    <string name="toast_save_ing">有内容保存中，请稍后</string>
    <string name="toast_tug_double">容器编号与库内拖斗编号重复，请修改</string>
    <string name="toast_container_double">容器编号与库内集装器编号重复，请修改</string>
    <string name="toast_pallet_double">容器编号与库内托盘编号重复，请修改</string>
    <string name="toast_weighting_weight_null">请输入称重重量</string>
    <string name="text_version_name">版本号</string>
    <string name="button_scan">扫描</string>
    <string name="button_unusual">异常</string>
    <string name="button_back">返回</string>
    <string name="button_signed_take_goods">签字提货</string>
    <string name="button_application_receipt">事故签证</string>
    <string name="button_piking_confirm">确认提货</string>
    <string name="button_piking_channel">确认分配</string>
    <string name="button_take_goods">提货</string>
    <string name="button_save">保存</string>
    <string name="button_submit">提交</string>
    <string name="button_all_submit">全部提交</string>
    <string name="button_revise">修改</string>
    <string name="button_issue">出库</string>
    <string name="button_revise_check">修改复核</string>
    <string name="button_remove_board">拆板</string>
    <string name="button_group_merge">合板</string>
    <string name="button_group_sort">排序</string>
    <string name="button_add_goods">新增货物</string>
    <string name="button_add_item">新增条目</string>
    <string name="text_unusual_type">异常类型</string>
    <string name="text_unusual_gradle">异常等级</string>
    <string name="text_unusual_count">异常件数</string>
    <string name="text_unusual_remarks">异常备注</string>
    <string name="text_unusual_photo">异常照片</string>
    <string name="text_create_person">创建人</string>
    <string name="text_sender">托运人</string>
    <string name="text_sender_address">托运人地址</string>
    <string name="text_receiver">收货人</string>
    <string name="text_receiver_address">收货人地址</string>
    <string name="text_accident_product_name">受损品名</string>
    <string name="text_accident_count">* 受损件数</string>
    <string name="text_accident_weight">* 受损重量</string>
    <string name="text_declared_value">声明价值</string>
    <string name="text_insurance_value">保险价值</string>
    <string name="text_inspection_condition">* 验视情况</string>
    <string name="text_treatment">* 处理情况</string>
    <string name="text_accident_type">* 事故类别</string>
    <string name="text_accident_type_lose">丢失</string>
    <string name="text_accident_type_spoil">损坏</string>
    <string name="text_accident_type_lack">短少</string>
    <string name="text_accident_type_deterioration">变质</string>
    <string name="text_accident_type_contaminated">污染</string>
    <string name="text_other">其他</string>
    <string name="toast_accident_count_null">受损件数不能为空</string>
    <string name="toast_accident_weight_null">受损重量不能为空</string>
    <string name="toast_inspection_condition_null">验视情况不能为空</string>
    <string name="toast_treatment_null">处理情况不能为空</string>
    <string name="toast_accident_type_null">至少选择一项事故类别</string>
    <string name="text_blank_record">空白记录</string>
    <string name="switch_off_already">已</string>
    <string name="switch_on_part">待</string>
    <string name="text_read">已读</string>
    <string name="text_unread">未读</string>
    <string name="text_fetch">读取</string>
    <string name="text_message_type">消息类型</string>
    <string name="text_message_info">消息内容</string>
    <string name="text_message_sender">发送人</string>
    <string name="text_message_send_time">发送时间</string>
    <string name="text_operation_info">操作信息</string>
    <string name="text_create_new">新建</string>
    <string name="text_create_time">录单时间</string>
    <string name="switch_no_channel">待分通道</string>
    <string name="switch_take_already">已提货</string>
    <string name="switch_take_part">待提货</string>
    <string name="switch_picking_already">已</string>
    <string name="switch_picking_part">待</string>
    <string name="hint_please_input">请输入</string>
    <string name="hint_please_select">请选择</string>
    <string name="spinner_select">--请选择--</string>
    <string name="text_not_precious">非贵重物品</string>
    <string name="text_precious">贵重物品</string>
    <string name="text_not_dangerous">非危险品</string>
    <string name="text_dangerous">危险品</string>
    <string name="text_normal">正常</string>
    <string name="text_torn">破损</string>
    <string name="text_shortage">少收</string>
    <string name="text_overcharge">多收</string>
    <string name="text_tug_nos">拖斗无需选择托盘</string>
    <string name="text_be_verified">审核中</string>
    <string name="text_fail">未通过</string>
    <string name="text_passed">已通过</string>
    <string name="text_tug">拖斗</string>
    <string name="text_container">集装器</string>
    <string name="text_custom_tug">自定义拖斗</string>
    <string name="text_custom_pallet">自定义托盘</string>
    <string name="text_add_container">自定义集装器</string>
    <string name="text_finish">完成</string>
    <string name="text_not_finish">未完成</string>
    <string name="text_not">无</string>
    <string name="text_have">有</string>
    <string name="text_photo">拍照</string>
    <string name="text_video">视频</string>
    <string name="title_enter_port_guarantee">进港保障</string>
    <string name="title_enter_port_warehousing">进港入库</string>
    <string name="title_enter_port_take_goods">进港提货</string>
    <string name="title_enter_port_picking_goods">进港提货</string>
    <string name="title_enter_port_take_goods_details">提货详情</string>
    <string name="title_enter_port_channeling">分配通道</string>
    <string name="title_enter_port_picking_goods_details">提货详情</string>
    <string name="title_enter_port_inventory">进港盘库</string>
    <string name="title_enter_port_handover">进港交接</string>
    <string name="title_order_unusual">货物异常</string>
    <string name="title_blank_container_in">空板入库</string>
    <string name="title_blank_container_out">空板出库</string>
    <string name="title_write_nfc">标签写入</string>
    <string name="title_leave_port_guarantee">出港保障</string>
    <string name="title_leave_port_collect_check">收运核查</string>
    <string name="title_leave_port_warehousing">出港入库</string>
    <string name="title_leave_port_check">出港复核</string>
    <string name="title_leave_port_group_board">出港组板</string>
    <string name="title_leave_port_duplicate">出港复重</string>
    <string name="title_leave_port_return">出港退运</string>
    <string name="title_enter_port_express_delivery">快件交接</string>
    <string name="title_leave_port_weighing">出库称重</string>
    <string name="title_leave_port_handover">出港交接</string>
    <string name="title_leave_port_inventory">出港盘库</string>
    <string name="title_user_manager">用户管理</string>
    <string name="title_user_login_out">退出登录</string>
    <string name="title_see_pic">查看图片</string>
    <string name="title_not_inventory_count">未盘运单数</string>
    <string name="title_inventory_person">盘库人</string>
    <string name="title_inventory_time">盘库时间</string>
    <string name="title_inventory_result">盘库结果</string>
    <string name="title_inventory_count">盘库件数</string>
    <string name="title_inventory_status">盘库状态</string>
    <string name="title_status">状态</string>
    <string name="text_storeroom_order">库存运单</string>
    <string name="text_storeroom_more">多收</string>
    <string name="text_storeroom_less">少收</string>
    <string name="text_check_part">待核</string>
    <string name="text_check_already">已核</string>
    <string name="hint_search">搜索内容</string>
    <string name="text_cancel">取消</string>
    <string name="text_confirm">确定</string>
    <string name="text_reset">重签</string>
    <string name="text_position_text">序号</string>
    <string name="text_positionlist_text">序列号</string>
    <string name="text_operation">操作</string>
    <string name="text_type_column">类型 ：</string>
</resources>