<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fd"
    android:fitsSystemWindows="true"
    tools:context=".activity.StocktakingScanActivity">

    <TextView
        android:id="@+id/mTv_TitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/color_blue_dark_80"
        android:gravity="center"
        android:text="@string/text_warehouse_entry_processing"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/mRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:layout_below="@id/mTv_TitleBar"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mIv_OutboundImg"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:src="@mipmap/stocktaking_list_log" />

                <TextView
                    android:id="@+id/mTv_deviceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_toRightOf="@id/mIv_OutboundImg"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/black_10" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_5"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_2"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_marginRight="@dimen/dp_2"
                            android:layout_toLeftOf="@id/ll"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_type_column"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sp_12" />

                            <TextView
                                android:id="@+id/mTv_typeColumn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sp_12" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity=""
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_model"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sp_12" />

                            <TextView
                                android:id="@+id/mTv_Model"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/sp_12" />

                        </LinearLayout>


                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_supplier"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sp_12" />

                        <TextView
                            android:id="@+id/mTv_Supplier"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/sp_12" />

                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/mTv_progress"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:text="100/100"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mLl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_below="@id/mRl"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/color_80">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_2"
            android:text="@string/text_position_text"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_positionlist_text"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_status"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_describe"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_operation"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <include
        layout="@layout/view_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mLl"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10" />


</RelativeLayout>